// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button / appearance flat 1`] = `
<button
  data-css-1oaxr3i=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / appearance primary 1`] = `
<button
  data-css-126c1n5=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / appearance secondary 1`] = `
<button
  data-css-8zfofx=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / appearance stroke 1`] = `
<button
  data-css-1b3hu0l=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / as link default 1`] = `
<a
  data-css-126c1n5=""
  disabled={false}
  href="https://duckduckgo.com"
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click as link
  </span>
</a>
`;

exports[`Storyshots Button / as link with icon 1`] = `
<a
  data-css-1j5y3lw=""
  disabled={false}
  href="https://duckduckgo.com"
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="pencil icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.276 15.862L5 19l3.14-.275 8.085-8.086-2.863-2.863-8.086 8.086zM17.64 9.225l.767-.767a2 2 0 00.592-1.431 2 2 0 00-.593-1.433 1.996 1.996 0 00-1.43-.591c-.545 0-1.048.208-1.433.593l-.766.766 2.863 2.863zm-.665-6.222c1.076 0 2.086.418 2.845 1.177A3.997 3.997 0 0121 7.027a4 4 0 01-1.179 2.846L9.411 20.282a.995.995 0 01-.464.263l-4.705.427a1.002 1.002 0 01-1.213-1.213l.427-4.704a.998.998 0 01.263-.464L14.13 4.18a3.997 3.997 0 012.845-1.179z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Click as link
  </span>
</a>
`;

exports[`Storyshots Button / disabled all 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <button
    data-css-126c1n5=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      primary
    </span>
  </button>
  <button
    data-css-5torc2=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      primary disabled
    </span>
  </button>
  <button
    data-css-8zfofx=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      secondary
    </span>
  </button>
  <button
    data-css-7n6w3m=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      secondary disabled
    </span>
  </button>
  <button
    data-css-1b3hu0l=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      stroke
    </span>
  </button>
  <button
    data-css-a8u0mb=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      stroke disabled
    </span>
  </button>
  <button
    data-css-1oaxr3i=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      flat
    </span>
  </button>
  <button
    data-css-9d5wgk=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      flat disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Button / disabled with icon 1`] = `
<button
  data-css-1cln9ma=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="pencil icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.276 15.862L5 19l3.14-.275 8.085-8.086-2.863-2.863-8.086 8.086zM17.64 9.225l.767-.767a2 2 0 00.592-1.431 2 2 0 00-.593-1.433 1.996 1.996 0 00-1.43-.591c-.545 0-1.048.208-1.433.593l-.766.766 2.863 2.863zm-.665-6.222c1.076 0 2.086.418 2.845 1.177A3.997 3.997 0 0121 7.027a4 4 0 01-1.179 2.846L9.411 20.282a.995.995 0 01-.464.263l-4.705.427a1.002 1.002 0 01-1.213-1.213l.427-4.704a.998.998 0 01.263-.464L14.13 4.18a3.997 3.997 0 012.845-1.179z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Disabled
  </span>
</button>
`;

exports[`Storyshots Button / icon flat 1`] = `
<button
  data-css-1doxelo=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon large 1`] = `
<button
  data-css-1ko2a0v=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon left 1`] = `
<button
  data-css-1j5y3lw=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon lone flat large 1`] = `
<button
  data-css-1dy4gur=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone flat medium 1`] = `
<button
  data-css-1hqozp8=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone flat small 1`] = `
<button
  data-css-j5lae8=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone flat xSmall 1`] = `
<button
  data-css-1oxsf56=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone primary large 1`] = `
<button
  data-css-1usynr4=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone primary medium 1`] = `
<button
  data-css-17pni2c=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone primary small 1`] = `
<button
  data-css-quu2tp=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone primary xSmall 1`] = `
<button
  data-css-1sqr6ee=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary large 1`] = `
<button
  data-css-1yuq1yh=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary medium 1`] = `
<button
  data-css-1nr3gka=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary small 1`] = `
<button
  data-css-1kivhxf=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary xSmall 1`] = `
<button
  data-css-ld38fy=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke large 1`] = `
<button
  data-css-1aq19cj=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke medium 1`] = `
<button
  data-css-ox5yxu=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke small 1`] = `
<button
  data-css-8mbg1i=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke xSmall 1`] = `
<button
  data-css-1oczn9s=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon medium 1`] = `
<button
  data-css-1j5y3lw=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon primary 1`] = `
<button
  data-css-1j5y3lw=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon right 1`] = `
<button
  data-css-s72ldu=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-8b1vtw=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon secondary 1`] = `
<button
  data-css-1vg9h3q=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon small 1`] = `
<button
  data-css-14q2fuu=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon stroke 1`] = `
<button
  data-css-1euutdm=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon vertically aligned rows 1`] = `
<div>
  <button
    data-css-1j5y3lw=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With icon
    </span>
  </button>
  <button
    data-css-126c1n5=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Without icon
    </span>
  </button>
</div>
`;

exports[`Storyshots Button / icon xSmall 1`] = `
<button
  data-css-1xutajp=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / in row same vertical height 1`] = `
<div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      data-css-1wcbdv4=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-z6jm27=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-2eb4qy=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-ow8138=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      data-css-1jt6sjh=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-7lwvvl=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-8e2uc6=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-1cxmxyp=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      data-css-126c1n5=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-8zfofx=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-1b3hu0l=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-1oaxr3i=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      data-css-oiv6f1=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-fzepe=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-18a121g=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-183ijz8=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Button / loading flat 1`] = `
<button
  data-css-183ijz8=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-1ec065u=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading large 1`] = `
<button
  data-css-oiv6f1=""
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-10bxom6=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading lone icon 1`] = `
<button
  data-css-1usynr4=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-10bxom6=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / loading medium 1`] = `
<button
  data-css-126c1n5=""
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-10bxom6=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading no icon, hidden text 1`] = `
<button
  data-css-oiv6f1=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Text doesnt show when loading if no icon
  </span>
</button>
`;

exports[`Storyshots Button / loading primary 1`] = `
<button
  data-css-oiv6f1=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-10bxom6=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading secondary 1`] = `
<button
  data-css-fzepe=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-9pakmv=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading small 1`] = `
<button
  data-css-1jt6sjh=""
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-10bxom6=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading stroke 1`] = `
<button
  data-css-18a121g=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-1jut5p0=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading xSmall 1`] = `
<button
  data-css-1wcbdv4=""
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <span
        data-css-10bxom6=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / override styles with className 1`] = `
<button
  className={
    Object {
      "data-css-jxpnuu": "",
    }
  }
  data-css-1j5y3lw=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Green Button
  </span>
</button>
`;

exports[`Storyshots Button / override styles with style 1`] = `
<button
  data-css-1j5y3lw=""
  disabled={false}
  style={
    Object {
      "background": "red",
    }
  }
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Red Button
  </span>
</button>
`;

exports[`Storyshots Button / props pass through anchor supports download 1`] = `
<a
  data-css-126c1n5=""
  disabled={false}
  download={true}
  href="/somewhere"
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Link with download
  </span>
</a>
`;

exports[`Storyshots Button / props pass through aria-expanded 1`] = `
<button
  aria-expanded={true}
  data-css-126c1n5=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    aria-expanded
  </span>
</button>
`;

exports[`Storyshots Button / props pass through button doesnt support download 1`] = `
<button
  data-css-126c1n5=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Button with download
  </span>
</button>
`;

exports[`Storyshots Button / props pass through data-something 1`] = `
<button
  data-css-126c1n5=""
  data-something="wow"
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Custom data attributes
  </span>
</button>
`;

exports[`Storyshots Button / props pass through not supported 1`] = `
<button
  data-css-126c1n5=""
  disabled={false}
  onMouseOver={[Function]}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Should not mouseover
  </span>
</button>
`;

exports[`Storyshots Button / props pass through role 1`] = `
<button
  data-css-126c1n5=""
  disabled={false}
  role="link"
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Role Link
  </span>
</button>
`;

exports[`Storyshots Button / props pass through title 1`] = `
<button
  data-css-126c1n5=""
  disabled={false}
  style={Object {}}
  title="My caption"
>
  <span
    data-css-15b13by=""
  >
    With title
  </span>
</button>
`;

exports[`Storyshots Button / size large 1`] = `
<button
  data-css-oiv6f1=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / size medium 1`] = `
<button
  data-css-126c1n5=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / size small 1`] = `
<button
  data-css-1jt6sjh=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / size xSmall 1`] = `
<button
  data-css-1wcbdv4=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / theme nested 1`] = `
Array [
  <button
    data-css-1oaxr3i=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      dark
    </span>
  </button>,
  <button
    data-css-1vzxf37=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      light
    </span>
  </button>,
  <button
    data-css-1oaxr3i=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      dark
    </span>
  </button>,
]
`;

exports[`Storyshots Button / with onClick clicks once 1`] = `
<button
  data-css-1j5y3lw=""
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Clicks once
  </span>
</button>
`;

exports[`Storyshots Button / with ref ref to handle focus 1`] = `
<button
  data-css-126c1n5=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Should be focused
  </span>
</button>
`;
